[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemy.png" type="Texture" id=2]
[ext_resource path="res://HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/EnemyHealthUI/EnemyHealthUIEmpty.png" type="Texture" id=5]
[ext_resource path="res://Assets/EnemyHealthUI/EnemyHealthUIOver.png" type="Texture" id=6]
[ext_resource path="res://Assets/EnemyHealthUI/EnemyHealthUIFill.png" type="Texture" id=7]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=8]
[ext_resource path="res://EnemyHealthUI.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 26 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 26 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 26 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11, 4 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 4.0
height = 18.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 5 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -6 )
frames = SubResource( 4 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 5 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 8 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="CollisionShape2D" parent="HurtBox" index="1"]
position = Vector2( 0, -5 )
shape = SubResource( 7 )

[node name="EnemyHealthUI" type="TextureProgress" parent="."]
visible = false
margin_left = -18.0
margin_top = -20.0
margin_right = 18.0
margin_bottom = -16.0
texture_under = ExtResource( 5 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="EnemyHealthUI" instance=ExtResource( 8 )]

[node name="FloorHit" type="RayCast2D" parent="."]
position = Vector2( -17, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallHit" type="RayCast2D" parent="."]
position = Vector2( 0, -4 )
enabled = true
cast_to = Vector2( -20, 0 )
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyHealthUI/Stats" to="." method="_on_Stats_no_health"]

[editable path="HitBox"]

[editable path="HurtBox"]
